docs/2.0.1rc1/_sources/user-guide/model-gallery/index.rst.txt
:orphan:

.. _model-gallery:

Model gallery
=============

The model gallery provides a visual overview of the available models in Gammapy. In general
the models are grouped into the following categories:

- `~gammapy.modeling.models.SpectralModel`: models to describe spectral shapes of sources
- `~gammapy.modeling.models.SpatialModel`: models to describe spatial shapes (morphologies) of sources
- `~gammapy.modeling.models.TemporalModel`: models to describe temporal flux evolution of sources, such as light and phase curves

The models follow a naming scheme which contains the category as a suffix to the class name.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>

Spatial models
--------------




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model parametrising a disk.">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_disk_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_disk`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Disk spatial model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model parametrising a generalized Gaussian function.">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_gen_gauss_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_gen_gauss`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generalized gaussian spatial model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model parametrizing a projected radiating shell.">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_shell2_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_shell2`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Shell2 spatial model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model is a spatially constant model.">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_constant_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_constant`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Constant spatial model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model based on a 2D sky map provided as a template.">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_template_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_template`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Template spatial model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model is a delta function centered in lon_0 and lat_0 parameters provided:">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_point_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_point`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Point spatial model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model parametrizing a projected radiating shell.">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_shell_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_shell`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Shell spatial model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a piecewise spatial correction with a free norm parameter at each fixed node in longitude, latitude and optionally energy.">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_piecewise_norm_spatial_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_piecewise_norm_spatial`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Piecewise norm spatial model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This is a spatial model parametrising a Gaussian function.">

.. only:: html

  .. image:: /user-guide/model-gallery/spatial/images/thumb/sphx_glr_plot_gauss_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spatial/plot_gauss`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gaussian spatial model</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Spectral models
---------------




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model takes a constant value along the spectral range.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_constant_spectral_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_constant_spectral`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Constant spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a log parabola spectral correction with a norm parameter.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_logparabola_norm_spectral_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_logparabola_norm_spectral`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Log parabola spectral norm model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a power law spectrum.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_powerlaw_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_powerlaw`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Power law spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a cutoff power law spectral correction with a norm parameter.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_exp_cutoff_powerlaw_norm_spectral_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_exp_cutoff_powerlaw_norm_spectral`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exponential cutoff power law norm spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model evaluates absorbed spectral model.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_absorbed_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_absorbed`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EBL absorption spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a power law spectral correction with a norm and tilt parameter.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_powerlaw_norm_spectral_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_powerlaw_norm_spectral`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Power law norm spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a log parabola spectrum.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_logparabola_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_logparabola`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Log parabola spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises super exponential cutoff power-law model spectrum used for 4FGL.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_super_exp_cutoff_powerlaw_4fgl_dr1_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_super_exp_cutoff_powerlaw_4fgl_dr1`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Super Exponential Cutoff Power Law Model used for 4FGL-DR1 (and DR2)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a power law spectrum with integral as amplitude parameter.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_powerlaw2_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_powerlaw2`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Power law 2 spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a cutoff power law spectrum.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_exp_cutoff_powerlaw_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_exp_cutoff_powerlaw`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exponential cutoff power law spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a piecewise spectral correction with a free norm parameter at each fixed energy node.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_piecewise_norm_spectral_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_piecewise_norm_spectral`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Piecewise  norm spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a cutoff power law spectrum used for 3FGL.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_exp_cutoff_powerlaw_3fgl_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_exp_cutoff_powerlaw_3fgl`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Exponential cutoff power law spectral model used for 3FGL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model is defined by custom tabular values.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_template_spectral_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_template_spectral`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Template spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises super exponential cutoff power-law model spectrum used for 3FGL.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_super_exp_cutoff_powerlaw_3fgl_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_super_exp_cutoff_powerlaw_3fgl`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Super exponential cutoff power law model used for 3FGL</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises super exponential cutoff power-law model spectrum used for 4FGL.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_super_exp_cutoff_powerlaw_4fgl_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_super_exp_cutoff_powerlaw_4fgl`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Super Exponential Cutoff Power Law Model used for 4FGL-DR3</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a smooth broken power law spectrum.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_smooth_broken_powerlaw_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_smooth_broken_powerlaw`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Smooth broken power law spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a gaussian spectrum.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_gauss_spectral_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_gauss_spectral`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gaussian spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This class provides an interface with the models defined in the naima models module.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_naima_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_naima`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Naima spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a broken power law spectrum.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_broken_powerlaw_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_broken_powerlaw`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Broken power law spectral model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model is formed by the arithmetic combination of any two other spectral models.">

.. only:: html

  .. image:: /user-guide/model-gallery/spectral/images/thumb/sphx_glr_plot_compound_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/spectral/plot_compound`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Compound spectral model</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>

Temporal models
---------------




.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a PhaseCurve time model, i.e. with a template phasogram and timing parameters">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_template_phase_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_template_phase_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Phase curve temporal model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a linear time model.">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_linear_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_linear_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Linear temporal model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a time model of sinusoidal modulation.">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_sine_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_sine_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Sine temporal model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a generalized Gaussian time model.">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_generalized_gaussian_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_generalized_gaussian_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Generalized Gaussian temporal model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a power-law time model.">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_powerlaw_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_powerlaw_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PowerLaw temporal model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a LightCurve time model.">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_template_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_template_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Light curve temporal model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a constant time model.">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_constant_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_constant_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Constant temporal model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises an ExpDecay time model.">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_expdecay_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_expdecay_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">ExpDecay temporal model</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This model parametrises a gaussian time model.">

.. only:: html

  .. image:: /user-guide/model-gallery/temporal/images/thumb/sphx_glr_plot_gaussian_temporal_thumb.png
    :alt:

  :doc:`/user-guide/model-gallery/temporal/plot_gaussian_temporal`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Gaussian temporal model</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /user-guide/model-gallery/spatial/index.rst
   /user-guide/model-gallery/spectral/index.rst
   /user-guide/model-gallery/temporal/index.rst


.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-gallery

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download all examples in Python source code: model-gallery_python.zip </user-guide/model-gallery/model-gallery_python.zip>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download all examples in Jupyter notebooks: model-gallery_jupyter.zip </user-guide/model-gallery/model-gallery_jupyter.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
